Convert existing writeup to LNCS format

--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -7,16 +7,16 @@
 \title{Supercomputing Centers and Electricity Service Providers: Europe and the United States}
 \author{Natalie Bates and Tapasya Patki \\ Demand Response Team, Energy-Efficient HPC Working Group}
 \date{\today}
-
-\setlength{\topmargin}{-15mm}
-\setlength{\textwidth}{6.5in}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\textheight}{8.5in}
-\setlength{\footskip}{1.5in}
+%
+%\setlength{\topmargin}{-15mm}
+%\setlength{\textwidth}{6.5in}
+%\setlength{\oddsidemargin}{0mm}
+%\setlength{\textheight}{8.5in}
+%\setlength{\footskip}{1.5in}
 
 \begin{document}
-\fontsize{10}{15}
-\selectfont
+%\fontsize{10}{15}
+%\selectfont
 \maketitle
 \section{Introduction}
 
