--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -5,8 +5,9 @@
 \sloppy
 
 \title{Supercomputing Centers and Electricity Service Providers: Europe and the United States}
-\author{Natalie Bates and Tapasya Patki \\ Demand Response Team, Energy-Efficient HPC Working Group}
-\date{\today}
+\author{TBD}
+%\author{Natalie Bates and Tapasya Patki \\ Demand Response Team, Energy-Efficient HPC Working Group}
+%\date{\today}
 %
 %\setlength{\topmargin}{-15mm}
 %\setlength{\textwidth}{6.5in}
@@ -18,13 +19,18 @@
 %\fontsize{10}{15}
 %\selectfont
 \maketitle
+
+\abstract{
+The next generation of supercomputers is expected to be strictly power constrained. 
+}
+
 \section{Introduction}
 
-Supercomputing Centers (SCs) for High-Performance Computing (HPC) with petascale capabilities have high power demands, with peak requirements of over 30 MW and fluctuations of a few megawatts. An example of this can be seen in Figure \ref{fig:seq}, which depicts the fluctuations in megawatts on the world's third fastest supercomputer, Sequoia, which delivers 16.3 petaflops and is hosted at Lawrence Livermore National Laboratory. As we venture toward exascale supercomputing, it is expected that these demands will grow--potentially affecting electrical grid efficiency and reliability.  Another important trend that could affect high power demand SCs is the changing nature of the electricity generation and distribution system.  There is a movement away from a linear, uni-directional system where power is generated, distributed and delivered to customers without their involvement.  The evolving system is multi-directional (or at least bi-directional) with communication and control going from end-customers to one or more of the electricity generation and distrubution entities.  The cloud providers, like Google, have already started to anticipate and take advantage of this changing landscape.  Google's response suggests vertical integration, especially with Google's Energy Subsidiary which gives Google the right to sell energy within the United States.  It is thus critical to understand the relationship between SCs and their associated Electricity Service Providers (ESPs) and to encourage the development of a more symbiotic association between the two. More specifically, it is important to analyze the expectations of SCs and ESPs from each other, and to study the willingness and feasibility of grid integration techniques. For example, the SmartGrid initiative \cite{SmartGrid} by the U.S. Department of Energy is making electricity delivery more fast and efficient by involving customers, adjusting to dynamic demands, and providing automated solutions and quick responses to remote locations. The Energy-Efficient High-Performance Computing Working Group (EE HPC WG) seeks to analyze the impact of similar Demand-Response (DR) techniques for SCs and their ESPs. 
+Supercomputing Centers (SCs) for High-Performance Computing (HPC) with petascale capabilities have high power demands, with peak requirements of over 30 MW and fluctuations of a few megawatts. An example of this can be seen in Figure \ref{fig:seq}, which depicts the fluctuations in megawatts on the world's third fastest supercomputer, Sequoia, which delivers 16.3 petaflops and is hosted at Lawrence Livermore National Laboratory. As we venture toward exascale supercomputing, it is expected that these demands will grow--potentially affecting electrical grid efficiency and reliability.  Another important trend that could affect high power demand SCs is the changing nature of the electricity generation and distribution system.  There is a movement away from a linear, uni-directional system where power is generated, distributed and delivered to customers without their involvement.  The evolving system is multi-directional (or at least bi-directional) with communication and control going from end-customers to one or more of the electricity generation and distribution entities.  The cloud providers, like Google, have already started to anticipate and take advantage of this changing landscape.  Google's response suggests vertical integration, especially with Google's Energy Subsidiary which gives Google the right to sell energy within the United States.  It is thus critical to understand the relationship between SCs and their associated Electricity Service Providers (ESPs) and to encourage the development of a more symbiotic association between the two. More specifically, it is important to analyze the expectations of SCs and ESPs from each other, and to study the willingness and feasibility of grid integration techniques. For example, the SmartGrid initiative \cite{SmartGrid} by the U.S. Department of Energy is making electricity delivery more fast and efficient by involving customers, adjusting to dynamic demands, and providing automated solutions and quick responses to remote locations. The Energy-Efficient High-Performance Computing Working Group (EE HPC WG) seeks to analyze the impact of similar Demand-Response (DR) techniques for SCs and their ESPs. 
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.7]{figs/Sequoia.jpg}
+\frame{\includegraphics[scale=0.6]{figs/seq.pdf}}
 \caption{Sequoia Supercomputer Power Swings}
 \label{fig:seq}
 \end{center}
