--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -21,7 +21,7 @@
 \maketitle
 
 \abstract{
-The next generation of supercomputers is expected to be strictly power constrained. 
+Power management is one of the key challenges in the path toward exascale. Current as well as future supercomputing centers (SCs) have high power demands, making it challenging for the electricity service providers (ESPs) to ensure efficient distribution and reliable operation. In order to develop a symbiotic relationship between the two in the future and to support effective power management at all levels, it is critical to understand and analyze how the existing relationships between ESPs and SCs were formed and how these should evolve. In this paper, we conduct a detailed survey and compare the perspectives of European SCs to that of the United States. We show that the SCs in the United States are more open toward cooperating and developing strategies with their ESPs. We infer that this result is dependent on the electricity market in the geographical region and the support that a particular SC has in terms of contract negotiation. Additionally, we take a detailed look at the relationship between ESPs and SCs at the Oak Ridge National Laboratory (ORNL), Lawrence Livermore National Laboratory (LLNL), and the Leibnitz Supercomputing Center (LRZ).
 }
 
 \section{Introduction}
