--- a/Nov2015/intws.tex
+++ b/Nov2015/intws.tex
@@ -1,4 +1,66 @@
-\section{Site-Specific Interviews}
+\section{Qualitative Analysis: Site-Specific Interviews}
+
+The results presented in the previous section were based on data gathered through a questionnaire created for HPC centers based on experience from a United States context. The preliminary results of the comparison across the geographical regions gave the impression that European SCs had very limited communication with their ESPs with respect to grid integration. However, it was apparent that some SCs in Europe engage in collaboration with their ESPs in order to ensure minimal fluctuations as well as for forecasting of deviations from normal power consumption patterns. In order to shed light on the details of the relationships between SCs and ESPs that were not captured in the questionnaire we designed a qualitative interview and surveyed ORNL, LLNL and LRZ. The thesis is that a qualitative analysis will yield more complete information and will enable us to present more thorough comparative study on the status of grid integration of SCs in Europe and the US. Table \ref{tabIntw} presents details of this qualitative analysis. We have recorded the results in a tabular form to facilitate comparison between the three sites under consideration. 
+
+\begin{table}
+\centering
+\label{tabIntw} 
+\begin{tabular}{|l|l|l|l|}
+ \hline
+ \bf{Site} & \bf{ORNL} & \bf{LLNL} & \bf{LRZ} \\ 
+ \hline
+ HPC System & Titan & Sequoia & SuperMUC \\ 
+ \hline
+ HPC workload & Basic Science & Basic and & Academic \\
+ type &&Nuclear Science&\\
+ \hline
+ HPC workload & Low & Mission-critical & Low\\
+ criticality&&&\\
+ \hline
+Point of contact & Jim Rogers & Anna-Maria Bailey & Herbert Huber\\
+\hline
+Responsibility & None, contract & None, contract & None, contract \\
+in negotiating & negotiated by DOE & negotiated by DOE & negotiated at \\
+contract with&&&the site-level by\\
+ESP &&&management\\
+\hline
+Electricity &Demand as well&Only energy & Energy is very\\
+Pricing & as energy charges,&charges, flat&expensive, high power \\
+Structure & depends on season&rate, relatively&taxes as well as\\
+&and time of day. &cheap. Thus care about&season dependent.\\
+&Operate within&utilizing all &Operate within\\
+&a power band&allocated power&power band\\
+\hline
+Power cost & & & \\
+as percentage&About 25-30\%&Under 8\%&About 50\%\\
+of TCO&&&\\
+\hline
+Obligations &&&\\
+Toward ESPs &None, and&None, and&None, and\\
+(and offered & no incentive either& no incentive either&no incentive either\\
+incentives for &&&\\
+ the same)&&&\\
+\hline
+Services for &None, except&None, except&None, except\\
+ESPs&maintenance or&maintenance or&maintenance or\\
+&general&general&general\\
+&forecasting&forecasting&forecasting\\
+\hline
+Future &Will use the &Will use the&Will use the \\
+relationship &same, reliable ESP&same, reliable ESP&same ESP, flexibility\\
+with ESP&&&decisions are political.\\
+\hline
+ \end{tabular}
+ \end{table}
+
+\subsection{ORNL}
+The DOE negotiates the contract for three sites including that of Titan at ORNL.  We don?t get our electricity from a local co-op, we get it directly from TVA. What the DOE and TVA negotiate each year is the capacity that is being provisioned. We usually pick a range; at present it is 35 MW to 75MW. We typically run at 50MW. We have two kinds of charges, a demand charge, which is fixed for a month, and an energy charge based on actual consumption. The demand charge is determined by analyzing 30 min blocks and determining the peak or max value for the month. . Scheduling loads across our sites is a tough scheduling problem. We only care about being under the 75MW limit because going over that means trouble for us. We have a 100M machine, the cost of which depreciated by 20K per hour. Hence, we have absolutely no financial incentive in minimizing the demand charge because we?ll never break even. We want to run our machine as hot as it can, doing as much work as it can. The energy charge for us is a step function. The more energy in kwh we consume, the lower is our energy cost, which is why we want to keep our system fully utilized and run it hot. We run at 90\% node utilization. 
+
+If DOE renegotiates for actual use instead of a lower bound (50MW instead of 35MW), will your electricity be cheaper?I don?t think so. TVA generates all its electricity. Currently, we have 44\% coal, 9-10\% hydro, about 10\% natural gas, and the rest is nuclear (about 30\%). If we push our lower limit to be 50MW instead of 35 MW, that distribution of sources of power supply will change, and TVA will most like relay the price to us, making electricity more expensive for us. we have two main charges: 1)	Demand Charge, which is fixed based on the peak demand in a 30 min period in a month, and2)	Energy Charge, which varies based on actual consumption.The demand charge can be off-peak or on-peak based on the time of the day. It has a time-of-use per day component. For example, 4a-10a in winter is peak, and 1p-7p in summer in peak. We measure this at 30 min granularity across the month. If the maximum over the month is say 52MW in off-peak hours, and 48MW in on-peak hours, we will get charged at the off-peak rate for 52W as the demand charge. Note that the off-peak charge for us is 10\% higher than the on-peak charge, which seems counterintuitive. The seasonal adjustments apply as well based on which month of the year it isFor us, the energy base charge is about 2 to 4 cents per kwh, which is really low. After including all the costs and seasonal adjustments, we pay about 9.4 cents per kwh.  For the industry, the base charge is about 5.8 cents per kwh (for FY 2014). We pay much lesser for our energy cost. We have a negotiated rate as we are extremely large customers.
+
+\subsection{LLNL}
+\subsection{LRZ}
+
 
 \section{Discussion}
 \label{comm}
