--- a/Nov2015/intws.tex
+++ b/Nov2015/intws.tex
@@ -1,6 +1,8 @@
 \section{Qualitative Analysis: Site-Specific Interviews}
 
-The results presented in the previous section were based on data gathered through a questionnaire created for HPC centers based on experience from a United States context. The preliminary results of the comparison across the geographical regions gave the impression that European SCs had very limited communication with their ESPs with respect to grid integration. However, it was apparent that some SCs in Europe engage in collaboration with their ESPs in order to ensure minimal fluctuations as well as for forecasting of deviations from normal power consumption patterns. In order to shed light on the details of the relationships between SCs and ESPs that were not captured in the questionnaire, we designed a qualitative interview and surveyed ORNL, LLNL and LRZ. The thesis was that a qualitative analysis will yield more complete information and will enable us to present more thorough comparative study on the status of grid integration of SCs in Europe and the US. For each site, we asked the questions listed below. We present the information from each SC in the subsections that follow.
+The results presented in the previous section were based on data gathered through a questionnaire created for HPC centers based on experience from a United States context. The preliminary results of the comparison across the geographical regions gave the impression that European SCs had very limited communication with their ESPs with respect to grid integration. 
+However, it was apparent that some SCs in Europe engage in collaboration with their ESPs in order to ensure minimal fluctuations as well as for forecasting of deviations from normal power consumption patterns. 
+In order to shed light on the details of the relationships between SCs and ESPs that were not captured in the questionnaire, we designed a qualitative interview and surveyed ORNL, LLNL and LRZ. The thesis was that a qualitative analysis will yield more complete information and will enable us to present more thorough comparative study on the status of grid integration of SCs in Europe and the US. For each site, we asked the questions listed below. We present the information from each SC in the subsections that follow.
 
 \begin{itemize}
 \item {What is your responsibility for negotiating the contract between your HPC facility and your ESP? }
@@ -65,22 +67,25 @@ The results presented in the previous section were based on data gathered throug
 % \end{table}
 
 \subsection{ORNL}
-The DOE negotiates the contract for three sites including that of Titan at ORNL.  We don?t get our electricity from a local co-op, we get it directly from TVA. What the DOE and TVA negotiate each year is the capacity that is being provisioned. We usually pick a range; at present it is 35 MW to 75MW. We typically run at 50MW. We have two kinds of charges, a demand charge, which is fixed for a month, and an energy charge based on actual consumption. The demand charge is determined by analyzing 30 min blocks and determining the peak or max value for the month. . Scheduling loads across our sites is a tough scheduling problem. We only care about being under the 75MW limit because going over that means trouble for us. We have a 100M machine, the cost of which depreciated by 20K per hour. Hence, we have absolutely no financial incentive in minimizing the demand charge because we?ll never break even. We want to run our machine as hot as it can, doing as much work as it can. The energy charge for us is a step function. The more energy in kwh we consume, the lower is our energy cost, which is why we want to keep our system fully utilized and run it hot. We run at 90\% node utilization. 
+For ORNL, the DOE negotiates the contract with the ESP.  ORNL gets its power from TVA, which generates, transmits and distributes the power. The DOE and TVA negotiate the power capacity that is being provisioned each year. Typically, a range for operation is chosen, for the current year, this range is 35 MW to 75 MW. 
+In terms of electricity pricing, ORNL incurs two kinds of charges: a demand charge, which is fixed for a month, and an energy charge based on actual power consumption. The demand charge is determined by analyzing 30 minute blocks and by determining the peak or maximum value for the month. The demand charge can be off-peak or on-peak based on the time of the day. It has a time-of-use per day component. The energy charge is a step function. The base charge for energy is under 4 cents per kwh, which is low when compared to the industry. Also, the more energy the site consumes in kWh, the lower is the base charge. As a result, ORNL wants to keep its systems fully utilized in terms of power. Including all the costs as well as seasonal charges, ORNL pays about 9.4 cents per kWh. ORNL's provider, TVA, is not affected by power swings of a few megawatts (5 to 8 MW) and is very reliable. \\
 
-If DOE renegotiates for actual use instead of a lower bound (50MW instead of 35MW), will your electricity be cheaper?I don?t think so. TVA generates all its electricity. Currently, we have 44\% coal, 9-10\% hydro, about 10\% natural gas, and the rest is nuclear (about 30\%). If we push our lower limit to be 50MW instead of 35 MW, that distribution of sources of power supply will change, and TVA will most like relay the price to us, making electricity more expensive for us. we have two main charges: 1)	Demand Charge, which is fixed based on the peak demand in a 30 min period in a month, and2)	Energy Charge, which varies based on actual consumption.The demand charge can be off-peak or on-peak based on the time of the day. It has a time-of-use per day component. For example, 4a-10a in winter is peak, and 1p-7p in summer in peak. We measure this at 30 min granularity across the month. If the maximum over the month is say 52MW in off-peak hours, and 48MW in on-peak hours, we will get charged at the off-peak rate for 52W as the demand charge. Note that the off-peak charge for us is 10\% higher than the on-peak charge, which seems counterintuitive. The seasonal adjustments apply as well based on which month of the year it isFor us, the energy base charge is about 2 to 4 cents per kwh, which is really low. After including all the costs and seasonal adjustments, we pay about 9.4 cents per kwh.  For the industry, the base charge is about 5.8 cents per kwh (for FY 2014). We pay much lesser for our energy cost. We have a negotiated rate as we are extremely large customers.
+ORNL does not have any obligations and provide any services to its ESP.  The only requirement is to operate in the range that was negotiated (35 MW to 75 MW). They have a model that explains their power usage that they provide to the TVA annually, but there is no two-way communication or forecasting or In general, the capital expenditure for the supercomputing center dominates the operational costs. As the HPC system cost depreciates with time (for example, Titan's depreciation is about 20K dollars per hour), there is little financial incentive to be flexible and to save on electricity costs, as the capital expenditure dominates the operational expenditure. The goal is thus to keep their site fully utilized in terms of power. 
 
 \subsection{LLNL}
+In the case of LLNL, the DOE negotiates the contract with the ESP with the help of a consulting company called Exeter.  A bulk purchase of power is made for about 100 MW of power capacity from the California-Oregon Transmission Project or COTP and is shared between LLNL and two other DOE sites. PG\&E is used for transmission and distribution and WAPA is used for generation. In terms of electricity pricing, LLNL does not pay a demand charge, but only pays a flat energy charge of about 4.5 cents per kWh, which is on the lower side when compared to the industry. Forecasting is done on a regular basis to be a good citizen. There is no financial incentive to save energy costs. There are no obligations from the ESP and no services are provided. The goal is to keep the site fully utilized in terms of power and to minimize leftover power.  
+
 \subsection{LRZ}
-
-
-\section{Discussion}
-\label{comm}
-From the comments section in our questionnaire, we noted that all SCs are already using \emph{demand forecasting} to communicate their upcoming demands and maintenance cycle schedules with their ESPs. For example, one comment was ``We project hourly average power at least a day in advance, within +/- 1MW''. Another interesting comment was ``We've to ensure that our power load neither over- nor undershoots the contracted power band. In any cases of foreseen power abnormalities we've to inform our grid provider at least two days ahead of schedule.''
-
-One of the SCs mentioned that they could not provide the forecast that was being asked by their ESP. More specifically, their comment indicated that their ESP asked for ``multi-year forecast of energy requirements, additional detailed forecasting and ultimately real time data, and power projections, hour by hour, for at least a day in advance.''
-
-When it came to ESP programs, the United States SCs showed more interest. ``Our site generates 30-35 MW of power yet still imports 5-10 MW. As a large generation source the utility providers see the campus as a highly attractive partner for offloading grid stress. automatic load shedding is being explored/deployed today, '' one of the SCs noted. Another comment was ``[We are] working on load sharing of data with utility to provide better scheduling tools and address potential grid changes.'' One of the SCs mentioned that they demonstrated that peak shedding and shifting was possible, but not deployed due to its impact on HPC productivity. 
-
-The European SCs, on the other had, did not have much knowledge about ESP programs. Some of the responses were ``There are not so many related options and features offered by providers. We are open to further and pro-active efforts as long as providers have other kinds of programs to propose'' and ``With many of your questions I am wondering about the kind of contracts other centers might have and about the quality of some electricity providers.''
-
-The comments also indicated that the SCs in United States are investigating the impact of power fluctuations on the electrical grid. ``[We are] working directly with provider to ensure that the effects of large load swings are understood. Have funded a simulation that accounts for all loads.'' and ``Our provider has no problem with our load swings. They indicate no concern with our next system either, but we are still looking into possible options in case there actually is a problem.'' were some of the interesting responses.
+For LRZ, the contract is negotiated at the site-level by management. The Munich Power Company negotiates the power costs for them on the European Power Exchange. Energy costs are vert expensive for LRZ. They operate in a 4 to 6 MW power band. Typically, they pay about 17.8 eurocents per kWh. Additionally, they pay some taxes and charges for power supplier, grid and renewable energy, which can be significant. Having consistent power consumption is usually considered better, and power swings result in much higher electricity costs. It is thus imperative to be able to forecast any power swings and to inform the ESP about the same. Better prediction models for power usage will definitely benefit LRZ in terms of electricity costs, as one of their goals is to save on energy costs. This is primarily because their energy costs dominate their operational costs.. Typically, LRZ lets the ESP know about 2 days in advance for any scheduled downtimes. At present, there are no major obligations toward or services provided to the ESP, mostly because of the QOS guarantees that have to be adhered to for their users. 
+%
+%\section{Discussion}
+%\label{comm}
+%From the comments section in our questionnaire, we noted that all SCs are already using \emph{demand forecasting} to communicate their upcoming demands and maintenance cycle schedules with their ESPs. For example, one comment was ``We project hourly average power at least a day in advance, within +/- 1MW''. Another interesting comment was ``We've to ensure that our power load neither over- nor undershoots the contracted power band. In any cases of foreseen power abnormalities we've to inform our grid provider at least two days ahead of schedule.''
+%
+%One of the SCs mentioned that they could not provide the forecast that was being asked by their ESP. More specifically, their comment indicated that their ESP asked for ``multi-year forecast of energy requirements, additional detailed forecasting and ultimately real time data, and power projections, hour by hour, for at least a day in advance.''
+%
+%When it came to ESP programs, the United States SCs showed more interest. ``Our site generates 30-35 MW of power yet still imports 5-10 MW. As a large generation source the utility providers see the campus as a highly attractive partner for offloading grid stress. automatic load shedding is being explored/deployed today, '' one of the SCs noted. Another comment was ``[We are] working on load sharing of data with utility to provide better scheduling tools and address potential grid changes.'' One of the SCs mentioned that they demonstrated that peak shedding and shifting was possible, but not deployed due to its impact on HPC productivity. 
+%
+%The European SCs, on the other had, did not have much knowledge about ESP programs. Some of the responses were ``There are not so many related options and features offered by providers. We are open to further and pro-active efforts as long as providers have other kinds of programs to propose'' and ``With many of your questions I am wondering about the kind of contracts other centers might have and about the quality of some electricity providers.''
+%
+%The comments also indicated that the SCs in United States are investigating the impact of power fluctuations on the electrical grid. ``[We are] working directly with provider to ensure that the effects of large load swings are understood. Have funded a simulation that accounts for all loads.'' and ``Our provider has no problem with our load swings. They indicate no concern with our next system either, but we are still looking into possible options in case there actually is a problem.'' were some of the interesting responses.
