--- a/Nov2015/strategies.tex
+++ b/Nov2015/strategies.tex
@@ -24,11 +24,12 @@ We now explain the techniques used in demand management. We define \emph{strateg
 
 We also asked our European respondents to indicate what might motivate them to communicate with their ESPs. The results are shown in Table \ref{fig:table2}. As can be noted from this figure, the main motivators are the financial incentives and the desire to be ``good citizens.''
 
-\begin{figure}
-\begin{center}
-\includegraphics[scale=0.5]{figs/Table2.jpg}
-\caption{Motivation}
-\label{fig:table2}
-\end{center}
-\end{figure}
-
+\input{Table2.jpg.tex}
+%\begin{figure}
+%\begin{center}
+%\includegraphics[scale=0.5]{figs/Table2.jpg}
+%\caption{Motivation}
+%\label{fig:table2}
+%\end{center}
+%\end{figure}
+%
