--- a/Nov2015/summary.tex
+++ b/Nov2015/summary.tex
@@ -1,12 +1,5 @@
 \section{Summary and Next Steps}
 \label{summary}
 
-\begin{figure}
-\begin{center}
-\includegraphics[scale=0.5]{figs/Table3.jpg}
-\caption{Communications with ESPs regarding available programs}
-\label{fig:table3}
-\end{center}
-\end{figure}
-
+\input{Table3.jpg.tex}
 In summary, we believe that the European ESP programs need to be studied in greater detail, and awareness regarding these programs needs to be raised among the SCs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe has had a discussion about programs with their ESP. As part of our future work, we want to explore the European ESP programs further, and also conduct a similar study in Japan.
